--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "pdfmake": "^0.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
